@@ -17,8 +17,8 @@ import org.bukkit.configuration.file.YamlConfiguration;
 
 import com.gamingmesh.jobs.Jobs;
 import com.gamingmesh.jobs.CMILib.CMIMaterial;
+import com.gamingmesh.jobs.CMILib.ConfigReader;
 import com.gamingmesh.jobs.CMILib.VersionChecker.Version;
-import com.gamingmesh.jobs.config.CommentedYamlConfiguration;
 import com.gamingmesh.jobs.container.Job;
 import com.gamingmesh.jobs.container.TopList;
 
@@ -146,10 +146,19 @@ public class SignUtil {
 	File f = new File(Jobs.getFolder(), "Signs.yml");
 	YamlConfiguration conf = YamlConfiguration.loadConfiguration(f);
 
-	CommentedYamlConfiguration writer = new CommentedYamlConfiguration();
-	conf.options().copyDefaults(true);
+	ConfigReader reader = null;
+	try {
+	    reader = new ConfigReader(f);
+	} catch (Exception e1) {
+	    e1.printStackTrace();
+	}
 
-	writer.addComment("Signs", "DO NOT EDIT THIS FILE BY HAND!");
+	if (reader == null) {
+	    return;
+	}
+
+	conf.options().copyDefaults(true);
+	reader.addComment("Signs", "DO NOT EDIT THIS FILE BY HAND!");
 
 	if (!conf.isConfigurationSection("Signs"))
 	    conf.createSection("Signs");
@@ -159,15 +168,15 @@ public class SignUtil {
 	    jobsSign sign = one.getValue();
 	    ++i;
 	    String path = "Signs." + i;
-	    writer.set(path + ".Loc", sign.locToBlockString());
-	    writer.set(path + ".Number", sign.getNumber());
-	    writer.set(path + ".Type", sign.getType().toString());
-	    writer.set(path + ".JobName", sign.getJobName());
-	    writer.set(path + ".Special", sign.isSpecial());
+	    reader.set(path + ".Loc", sign.locToBlockString());
+	    reader.set(path + ".Number", sign.getNumber());
+	    reader.set(path + ".Type", sign.getType().toString());
+	    reader.set(path + ".JobName", sign.getJobName());
+	    reader.set(path + ".Special", sign.isSpecial());
 	}
 
 	try {
-	    writer.save(f);
+	    reader.save(f);
 	} catch (IOException e) {
 	    e.printStackTrace();
 	}
